--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,43 +2,29 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build and run active file",
+            "label": "Build and Run",
             "type": "shell",
-            "command": "cmd.exe",
+            "command": "g++",
             "args": [
-                "/c",
-                "g++ \"${file}\" -o \"${fileDirname}\\${fileBasenameNoExtension}.exe\" && \"${fileDirname}\\${fileBasenameNoExtension}.exe\""
-            ],
-            "group": "build",
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "detail": "Builds and runs the active C++ file"
-        },
-        {
-            "type": "cppbuild",
-            "label": "C/C++: g++.exe build active file",
-            "command": "C:\\MinGW\\bin\\g++.exe",
-            "args": [
-                "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
+                "${fileDirname}/${fileBasenameNoExtension}.exe"
             ],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "compiler: C:\\MinGW\\bin\\g++.exe"
+            "problemMatcher": ["$gcc"],
+            "dependsOn": ["Run Executable"]
+        },
+        {
+            "label": "Run Executable",
+            "type": "shell",
+            "command": "${fileDirname}\\${fileBasenameNoExtension}.exe"
         }
     ]
 }
+
 
 
